--- a/BracketsLib/src/main/res/layout/fragment_brackts.xml
+++ b/BracketsLib/src/main/res/layout/fragment_brackts.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.ventura.emilp.tournamentbrackets.customviews.WrapContentHeightViewPager
+            <com.ventura.bracketslib.customviews.WrapContentHeightViewPager
                 android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
