--- a/BracketsLib/src/main/res/values/colors.xml
+++ b/BracketsLib/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="bracket_background">#1c222e</color>
+    <color name="bracket_color">#262e40</color>
 </resources>
