--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.ventura.bracketslib.BracketsView
-        android:id="@+id/bracket_view"
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/home_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:bracketBackgroundColor="#1c222e"
-        app:bracketColor="#262e40"
-        app:bracketTextColor="#fff" />
+        android:layout_height="match_parent"/>
+
+<!--    <com.ventura.bracketslib.BracketsView-->
+<!--        android:id="@+id/bracket_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:bracketBackgroundColor="#1c222e"-->
+<!--        app:bracketColor="#262e40"-->
+<!--        app:bracketTextColor="#fff" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
